[package]
name = "guess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1
debug = 1
panic = "abort"
incremental = true

[profile.release]
opt-level = 3
debug = 0

[dependencies]
rand = "0.8.4"
